Bug 158813 - Unable to open file for seed after finished download
Summary: Unable to open file for seed after finished download
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-05 18:12 UTC by Luca Gambetta
Modified: 2008-03-09 11:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
It's copyrighted material, sorry (11.28 KB, application/octet-stream)
2008-03-05 18:13 UTC, Luca Gambetta
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Gambetta 2008-03-05 18:12:52 UTC
Version:            (using KDE 4.0.2)
Installed from:    Compiled From Sources
Compiler:          GCC 4.2.2 
OS:                Linux

KTorrent 3.0.0.
My incoming downloads go to: /prateria/torrents/incoming/.
I setup KTorrent to move downloaded files to /prateria/torrents/terminati/.
When I download multifile torrents after the download finishes the files are moved correctly to /prateria/torrents/terminati, but KTorrent is unaware of this and prints the error message: "Error: impossible to open <name of file with path pointing to /prateria/incoming/>: no such file or directory", then seed stops and all my attempt to start it fails with the same error message.
This doesn't happens with torrents with only one file.
Attached is a torrent which cause the error.
Comment 1 Luca Gambetta 2008-03-05 18:13:57 UTC
Created attachment 23792 [details]
It's copyrighted material, sorry
Comment 2 Joris Guisson 2008-03-05 19:52:42 UTC
This seems to work in the latest SVN version, I will check if this is also fixed in the 3.0 branch, so that the fix will be part of 3.0.1
Comment 3 Joris Guisson 2008-03-05 20:15:29 UTC
I can't reproduce this with the released 3.0.0 version
Comment 4 Luca Gambetta 2008-03-05 20:41:17 UTC
Uhm... it happened with all multifile torrent I tried right now (not so many, honestly)...
With the attached download after the error message appeared I pressed "Start" after some time and it worked... it's strange... I must try with another torrent file...
Comment 5 Joris Guisson 2008-03-06 18:08:32 UTC
Strange, I tested it with another multifile torrent and it worked, KT kept on seeding. 
Comment 6 Joris Guisson 2008-03-06 18:28:24 UTC
OK I tried your torrent, and now I can reproduce it.

Comment 7 Joris Guisson 2008-03-09 11:08:47 UTC
SVN commit 783705 by guisson:

Fix bug causing KT to stop seeding after the data was moved to the completed dir.

BUG: 158813


 M  +13 -3     multifilecache.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=783705