Fix bug causing KT to stop seeding after the data was moved to the completed dir.

BUG: 158813

svn path=/trunk/extragear/network/ktorrent/; revision=783705