libbtcore/diskio/multifilecache.cpp
@@ -212,6 +212,9 @@ namespace bt
 		{
 			TorrentFile & tf = tor.getFile(i);
 			tf.setPathOnDisk(output_dir + tf.getPath());
+			CacheFile* cf = files.find(tf.getIndex());
+			if (cf)
+				cf->changePath(tf.getPathOnDisk());
 		}
 		saveFileMap();
 	}
@@ -255,6 +258,9 @@ namespace bt
 		{
 			TorrentFile & tf = tor.getFile(i);
 			tf.setPathOnDisk(new_output_dir + tf.getPath());
+			CacheFile* cf = files.find(tf.getIndex());
+			if (cf)
+				cf->changePath(tf.getPathOnDisk());
 			// check for empty directories and delete them
 			DeleteEmptyDirs(output_dir,tf.getPath());
 		}
@@ -289,13 +295,13 @@ namespace bt
 		return job;
 	}
 		
-	void MultiFileCache::moveDataFilesFinished(const QMap<TorrentFileInterface*,QString> & files,KJob* job)
+	void MultiFileCache::moveDataFilesFinished(const QMap<TorrentFileInterface*,QString> & fmap,KJob* job)
 	{
 		if (job->error())
 			return;
 		
-		QMap<TorrentFileInterface*,QString>::const_iterator i = files.begin();
-		while (i != files.end())
+		QMap<TorrentFileInterface*,QString>::const_iterator i = fmap.begin();
+		while (i != fmap.end())
 		{
 			TorrentFileInterface* tf = i.key();
 			QString path = tf->getPathOnDisk();
@@ -311,6 +317,10 @@ namespace bt
 			}
 			else
 				tf->setPathOnDisk(i.value());
+			
+			CacheFile* cf = files.find(tf->getIndex());
+			if (cf)
+				cf->changePath(tf->getPathOnDisk());
 			i++;
 		}
 		saveFileMap();
